css/main.scss
/* ... */
.newer-posts {
  left: 0;
}

.older-posts {
  right: 0;
}

.post-reading {
  color: rgba(0, 0, 0, 0.25);
  display: inline-block;
  font-family: $font-sans;
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  letter-spacing: -0.02em;
  line-height: 44px;
  position: absolute;
  right: 30px;
  top: 10px;
  white-space: nowrap;
  z-index: 999;
}

.tag-articleimage .post-reading {
  color: rgba(255, 255, 255, 0.9);
  text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25), 0px 0px 1px rgba(0, 0, 0, 0.5);
}

.site-footer {
  background-attachment: fixed;
  background-color: #303030;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 490px;
  margin-top: 4rem;
  position: relative;
  text-align: center;

  &:before {
    @include linear-gradient(to bottom, rgba(0,0,0,0.3) 0%,rgba(0,0,0,0.3) 60%,rgba(0,0,0,0.6) 100%);
    content: '';
    display: block;
    height: 100%;
    position: absolute;
    width: 100%;
  }
}

.icon {
  @include inline-block;
  background: rgba(87, 173, 104, .8);
  border-radius: 100%;
  color: #fff;
  font-size: 2.5rem;
  height: 64px;
  margin: 0 .5rem;
  text-align: center;
  width: 64px;
}

.footer-share .inner > a:hover {
  background: rgba(87, 173, 104, 1);
}

.footer-share .inner > a i {
  vertical-align: -3px;
}

.footer-legal .inner p,
.footer-legal .inner a, {
  color: #fff;
  font-size: 0.8rem;
  text-shadow: 0 0 4px #000;
  line-height: 1.4;
  margin: 0 auto;
}

.footer-legal .inner a {
  font-weight: bold;
}

.footer-share {
  position: absolute;
  height: 300px;
  width: 100%;
}

.share-title {
  padding: 6.8rem 0 3rem 0;
  margin: 0;
  font-size: 3.6rem;
  color: #fff;
}

.footer-legal {
  position: absolute;
  bottom: 2rem;
  width: 100%;
}
/* ... */

